...
                                    <constraint firstAttribute="bottom" secondItem="PVE-R8-zi7" secondAttribute="bottom" id="yVc-q9-X7y"/>
                                </constraints>
                            </view>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="q9X-y2-Q3g"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="authEntry"/>
                        <constraints>
                            <constraint firstItem="q9X-y2-Q3g" firstAttribute="trailing" secondItem="oRd-ny-Rp6" secondAttribute="trailing" id="23Z-bq-p2y"/>
                            <constraint firstAttribute="bottom" secondItem="Vz1-KG-knS" secondAttribute="bottom" id="K1l-BU-u1v"/>
                            <constraint firstItem="Vz1-KG-knS" firstAttribute="leading" secondItem="4Ag-aZ-ScX" secondAttribute="leading" id="Nm4-td-7wu"/>
                            <constraint firstItem="oRd-ny-Rp6" firstAttribute="leading" secondItem="q9X-y2-Q3g" secondAttribute="leading" id="aFd-4r-M5l"/>
                            <constraint firstAttribute="trailing" secondItem="Vz1-KG-knS" secondAttribute="trailing" id="buw-cn-Olv"/>
                            <constraint firstItem="q9X-y2-Q3g" firstAttribute="bottom" secondItem="oRd-ny-Rp6" secondAttribute="bottom" identifier="KeyboardConstraint" id="hpc-9v-vna"/>
                            <constraint firstItem="Vz1-KG-knS" firstAttribute="top" secondItem="4Ag-aZ-ScX" secondAttribute="top" id="tc7-jf-4x9"/>
                            <constraint firstItem="oRd-ny-Rp6" firstAttribute="top" secondItem="q9X-y2-Q3g" secondAttribute="top" id="xXG-gS-Gww"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Vaj-Bd-pgT">
                        <barButtonItem key="backBarButtonItem" title="passcode" id="jwC-lh-wPV"/>
                        <barButtonItem key="rightBarButtonItem" title="Settings" image="icon-misc" id="gLa-Xm-VG5">
                            <connections>
                                <segue destination="qNU-ah-yuG" kind="custom" customClass="StorkPopoverSegue" customModule="Raivo" customModuleProvider="target" id="gUw-ag-rhy"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
