...
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <inset key="separatorInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="WSM-vr-gJL"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="mainPasswords"/>
                        <constraints>
                            <constraint firstItem="ZYE-xS-Xob" firstAttribute="top" secondItem="qHX-Uj-Cbk" secondAttribute="top" id="I0H-VF-U3U"/>
                            <constraint firstItem="WSM-vr-gJL" firstAttribute="trailing" secondItem="ZYE-xS-Xob" secondAttribute="trailing" id="sxN-To-Rfm"/>
                            <constraint firstItem="ZYE-xS-Xob" firstAttribute="leading" secondItem="WSM-vr-gJL" secondAttribute="leading" id="uak-2h-iJg"/>
                            <constraint firstAttribute="bottom" secondItem="ZYE-xS-Xob" secondAttribute="bottom" identifier="KeyboardConstraint" id="zDH-kG-cff"/>
                        </constraints>
...
