...
                                        <rect key="frame" x="16" y="794" width="382" height="52"/>
                                        <color key="backgroundColor" red="0.91081506013870239" green="0.050439722836017609" blue="0.20007196068763733" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="continue">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="5K1-mB-K0a"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupWelcome">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="EQz-pQ-2NM"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupStorage">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="hC^FA7gW}TnW5MXB" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="OlT-xd-KJW">
                                                                <rect key="frame" x="0.0" y="77.5" width="398" height="45"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="passwordInitial"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="45" id="ReS-sI-JFs"/>
...
                        <viewLayoutGuide key="safeArea" id="Vfi-aW-s2x"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupPasswordInitial">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="hC^FA7gW}TnW5MXB" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="wLK-pr-MEs">
                                                                <rect key="frame" x="0.0" y="77.5" width="398" height="45"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="passwordConfirmation"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="45" id="S9i-Fh-Jw7"/>
...
                                        <rect key="frame" x="16" y="746" width="382" height="52"/>
                                        <color key="backgroundColor" red="0.91081506010000002" green="0.050439722839999999" blue="0.2000719607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="confirm">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="EVC-jq-tYX"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupPasswordConfirmation">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="dhH-y2-mD1"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupPasscodeInitial">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="p0m-Uu-o30"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupPasscodeConfirmation">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                                        <rect key="frame" x="16" y="650" width="382" height="52"/>
                                        <color key="backgroundColor" red="0.91081506010000002" green="0.050439722839999999" blue="0.2000719607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="enable">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="Tpf-jC-grM"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupBiometrics">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="0EK-Hk-Z3l"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupSettings">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                                        <rect key="frame" x="16" y="794" width="382" height="52"/>
                                        <color key="backgroundColor" red="0.91081506010000002" green="0.050439722839999999" blue="0.2000719607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="start">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="2Dj-6y-AgQ"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="setupComplete">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
